<?xml version="1.0"?>
<package format="2">
  <name>simu_tools</name>
  <version>1.1.0</version>
  <description>Simulation tools.</description>
  <maintainer email="zjunchuan@gmail.com">Junchuan Zhang</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
</package>
